<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/exercise_timer"
        android:layout_width="278dp"
        android:layout_height="159dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="347dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/_60"
        android:textSize="60sp" />

    <Button
        android:id="@+id/start_next_exercise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="123dp"
        android:text="@string/start_next_exercise" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="534dp"
        android:autofillHints="

"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/exercise_timer"
        android:textSize="30sp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="185dp"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="219dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/bicep_curls"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="298dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/set_1_3"
        android:textSize="24sp" />

</RelativeLayout>