<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen2CreateWorkoutPlan">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="612dp"
        android:text="@string/create_new_workout_plan"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="535dp"
        android:text="@string/name_of_new_workout_plan"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textview_third"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="349dp"
        android:text="@string/duration_of_workout_minutes"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_EPlan"
        android:layout_width="306dp"
        android:layout_height="101dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="409dp"
        android:hint="@string/e_g_leg_day"
        android:textColorHint="#78909C"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/workout_duration"
        android:layout_width="308dp"
        android:layout_height="119dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="209dp"
        android:entries="@array/workout_timings"
        android:gravity="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_gotoscreen5"
        android:layout_width="193dp"
        android:layout_height="78dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="109dp"
        android:text="@string/create_workout" />


</RelativeLayout>