<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen1Homepage">

    <TextView
        android:id="@+id/txtAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="598dp"
        android:text="@string/exercise_time"
        android:textSize="35sp" />

    <Button
        android:id="@+id/button_LdWrkPln"
        android:layout_width="242dp"
        android:layout_height="113dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="83dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="142dp"
        android:text="@string/load_workout_plan"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_Create_Exercises"
        android:layout_width="242dp"
        android:layout_height="113dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="87dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="25dp"
        android:text="Create Exercises"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_CrtWrkPln"
        android:layout_width="wrap_content"
        android:layout_height="104dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="260dp"
        android:text="@string/create_new_workout_plan"
        android:textSize="20sp"
        tools:ignore="UsingOnClickInXml" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="247dp"
        android:layout_height="446dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="253dp"
        app:srcCompat="@drawable/bicep_flec" />
</RelativeLayout>